k8s/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: jboss/keycloak:15.0.2
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
